tests/regression/error/hw4_error19.nex
true ? 1 + false : none - true;
